# swig_example

./: CMakeLists.txt  README.md  S_example.cpp  S_example.h  S_example.i  S_example.py  S_example_wrap.cxx  _S_example.cp312-win_amd64.pyd  example.cpp  example.h  example.i  example.py  setup.py  test.py
